# llm-router

./: .gitignore  AGENTS.md  cc.txt  initial-prompt.md  justfile  models.yaml  oc.txt  pyproject.toml  ruff.toml
.open-mem/: memory.db-shm
.playwright-mcp/: page-2026-06-09T17-41-12-400Z.yml  page-2026-06-09T17-41-23-025Z.yml
clients/voice-web/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
clients/voice-web/scripts/: copy-workers.mjs
clients/voice-web/src/: App.tsx  audio-engine.ts  audio-processor.ts  index.css  modules.d.ts  protocol.ts  use-voice.ts
clients/voice-web/src/components/: Controls.tsx  PhaseBar.tsx  Transcript.tsx
deploy/: Dockerfile.tool-proxy  acestep-music.service  deploy-nodes.sh  docker-compose.yaml  flux-server.service  kokoro-tts.service  litellm-dashboard.service  litellm-proxy.service  lmstudio.service  node-agent.service  opencode-wellknown.service  orpheus-fastapi.service  orpheus-llama.service  qwen-image-edit.service  qwen3-coder-fim.service  qwen3-vl-32b.service  qwen3-vl-8b-hypatia.service  run-qwen3-vl-8b-hypatia.sh  run-sglang-nemotron-nano-archimedes.sh  run-sglang-nemotron-super-archimedes.sh  run-sglang-qwen36-archimedes.sh  run-sglang-qwen36-hypatia.sh  setup-intel-gpu.sh  setup-qwen3-vl-8b-hypatia.sh  setup-security.sh  spark-mode.sh  sudoers-llm-router  tool-proxy.service  ui-tars.service  vllm@.service  whisper-server.service
deploy/multi-node/: launch.sh
deploy/openarc/: .env.example  .gitignore  docker-compose.yaml
deploy/router-db/: .env.example  .gitignore  docker-compose.yaml  llm-router-postgres.service  wait-netbird-ip.sh
deploy/voice/: bench-orpheus-mlx.py  bench-orpheus-mlx.sh
docs/: coding-model-comparison-2026-04-30.md  openarc-embeddings-padding-pr-2026-05-01.md
logs/: notification.json  stop.json
scripts/: patch-litellm.sh
src/llm_router/: bench.py  config.py  dashboard.py  generate_config.py  photo_tag.py  tui.py
src/llm_router/litellm_hooks/: on_demand.py
src/llm_router/node_agent/: gpu.py  main.py  models.py  ray_cluster.py  services.py
src/llm_router/node_agent/backends/: base.py  llamacpp.py  vllm.py  (+1 more)
src/llm_router/rag/: __init__.py  chunker.py  cli.py  docparse.py  embed.py  mcp_server.py  rerank.py  store.py
src/llm_router/tool_proxy/: auto_router.py  extraction.py  service.py  streaming.py  thinking.py
src/llm_router/voice/: DESIGN.md  __init__.py  handoff.py  handoff_tts.py  moshi_client.py  server.py  streaming_tts.py
tests/: test_config.py  test_extraction.py  test_generate_config.py  test_llamacpp.py  test_multi_node.py  test_node_agent.py  test_node_agent_ray.py  test_ray_cluster.py  test_services.py  test_thinking.py
tools/: bench-models.py
(+5 files in other folders)
