[project]
name = "llm-router"
version = "0.1.0"
description = "LLM routing layer: single OpenAI-compatible endpoint across multiple GPU nodes"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "openai>=1.60",
    "click>=8.1",
]

[project.optional-dependencies]
tool-proxy = [
    "duckduckgo-search>=7.0",
    "trafilatura>=2.0",
    "simpleeval>=1.0",
    "requests>=2.32",
]
litellm = [
    "litellm>=1.50",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "httpx",  # for FastAPI TestClient
]

[project.scripts]
llm-router-generate = "llm_router.generate_config:main"
llm-router-node-agent = "llm_router.node_agent.main:cli"
llm-router-tool-proxy = "llm_router.tool_proxy.service:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_router"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
