[project]
name = "llm-router"
version = "0.1.0"
description = "LLM routing layer: single OpenAI-compatible endpoint across multiple GPU nodes"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "openai>=1.60",
    "click>=8.1",
    "rich>=13.0",
    "prometheus-client>=0.25.0",
    "prisma>=0.15.0",
    "aiohttp>=3.13.3",
    "numpy>=2.4.4",
    "sphn>=0.2.1",
]

[project.optional-dependencies]
tool-proxy = [
    "duckduckgo-search>=7.0",
    "trafilatura>=2.0",
    "simpleeval>=1.0",
    "requests[socks]>=2.32",
]
litellm = [
    "litellm[proxy]>=1.50",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "httpx",  # for FastAPI TestClient
]
rag = [
    "qdrant-client>=1.12",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-bash>=0.23",
    "docling>=2.0",
]
photo-tag = [
    "Pillow>=11.0",
    "pillow-heif>=0.18",
]

[project.scripts]
llm-router-generate = "llm_router.generate_config:main"
llm-router-node-agent = "llm_router.node_agent.main:cli"
llm-router-tool-proxy = "llm_router.tool_proxy.service:cli"
llm-router-dashboard = "llm_router.dashboard:cli"
llm-router-bench = "llm_router.bench:cli"
llm-router-tui = "llm_router.tui:cli"
llm-router-rag = "llm_router.rag.cli:cli"
photo-tag = "llm_router.photo_tag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_router"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
